# sysprog-lab4

./: .clang-format  .gitignore  CMakeLists.txt  README.md  configure_build.sh
.github/workflows/: build_and_tests.yml  tests.sh
src/: CMakeLists.txt  main.cpp
src/algorithms/: algorithms.cpp  algorithms.hpp
src/grammar/: Countable.hpp  Counter.hpp  Epsilon.hpp  Grammar.cpp  Grammar.hpp  GrammarSymbols.hpp  NonTerminal.cpp  NonTerminal.hpp  Symbol.cpp  Symbol.hpp  SymbolType.hpp  SyntaxRule.cpp  SyntaxRule.hpp  Terminal.cpp  Terminal.hpp  TypesSet.hpp  enumeration.hpp
src/lexer/: FiniteAutomataLexer.cpp  FiniteAutomataLexer.hpp  Lexem.hpp  Lexer.hpp
src/lifecycle/: Lifecycle.hpp
src/structures/: InputCountingDecorator.hpp  Queue.hpp  Set.hpp
src/syntax_analyser/: LL1.cpp  LL1.hpp  LL1Parsable.cpp  LL1Parsable.hpp  LLK.cpp  LLK.hpp  RecursiveDescend.cpp  RecursiveDescend.hpp  SyntaxAnalyser.hpp
tests/: CMakeLists.txt
tests/algorithms/: AlgorithmsTest.cpp
tests/lexer/: LexerTest.cpp
tests/parser/: LL1Test.cpp  LLKTest.cpp  RecursiveTest.cpp
